Fixed card display issue on small screens

--- a/Zodiac-cards/style.css
+++ b/Zodiac-cards/style.css
@@ -41,7 +41,7 @@ body {
   height: 100%;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
-  overflow: hidden;
+  overflow: auto;
   border-radius: 16px;
   -webkit-box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
   -moz-box-shadow: 0px 0px 30px 0px rgba(255, 255, 255, 1);
@@ -50,7 +50,7 @@ body {
 .card-face-front {
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -75,7 +75,7 @@ body {
 }
 .card-content {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 .card-header {
   position: relative;
